			wxFormBuilder ChangeLog
********************************************************************************
02/10/2012 Version 3.03.02 (Beta)
* ID: 3470209 - wxDIRCTRL_MULTIPLE Style missing for wxGenericDirCtrl.
* ID: 3472032 - Error in svn trunk 3.3-1 beta version generating python code.
* ID: 3480059 - Gettext, Unicode and wxPython.
* ID: 3486641 - XRC import does not accept CENTRE attributes.

01/17/2012 Version 3.03.01 (Beta)
* Fixed code generation for bitmaps provided by wxArtProvider - John Labenski.
^ Added support for custom resource and client wxArtProvider's IDs in bitmap properties - John Labenski.
* ID: 3437910 - Fixed codegeneration for context menus assigned to subclassed controls.
* ID: 3435478 - Fixed crash on loading icon from resource.
* ID: 3432356 - Possible bug with generated code for wxGridBagSizer.
* ID: 3396919 - Bug on AUI toolbar buttons.
* ID: 3395468 - wxChoice missing wxCB_SORT style.
^ Added ability to set default selection for wxComboBox/wxBitmapComboBox.
* ID: 3432383 - Missing delete for wxMenu object.
* ID: 3417877 - Generated cpp file leads to compiler warnings.
* ID: 3462454 - Fixed wxListCtrl code generation for wxEVT_COMMAND_LIST_COL_RIGHT_CLICK event.
* wxFB source code can be built with wxWidgets 2.9.2 - Andrea Zanellato, Eran Ifrah.

12/02/2011 Version 3.03.00 (Beta)
* Fixed improper placement of a comma at the end of the C/C++ enum list - Andrea Zanellato.
+ Added support for wxWizard - Andrea Zanellato.
+ Added support for PHP code generation - JGM.
^ Combo box component (wxComboBox) now supports value change from visual designer.
* Fixed gridbag sizer so it can be added directly to any container without need of 
  another underlying sizer.
^ Added missing IDs to wxArtProvider bitmap source.
* Fixed AUI pane buttons.
* Fixed AUI code generation for wxToolBar/wxAuiToolBar.
^ Drop-down menu associated with AUI toolbar's tool now shows its real content in designer.